force-app/main/default/objects/Breadwinner_Settings__c/Breadwinner_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Breadwinner Settings</label>
</CustomObject>