force-app/main/default/objects/Breadwinner_Settings__c/fields/Date_of_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Expiration__c</fullName>
    <label>Date of Expiration</label>
    <type>DateTime</type>
</CustomField>