force-app/main/default/objects/Breadwinner_Settings__c/fields/Multi_Processor_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Multi_Processor_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be deleted</description>
    <label>Multi-Processor Enabled</label>
    <type>Checkbox</type>
</CustomField>