force-app/main/default/objects/Breadwinner_Settings__c/fields/Override_Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Override_Plan_Code__c</fullName>
    <description>Stores Override Plan Code</description>
    <label>Override Plan Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>