force-app/main/default/objects/Breadwinner_Settings__c/fields/Override_Plan_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Override_Plan_Expiration_Date__c</fullName>
    <label>Override Plan Expiration Date</label>
    <type>DateTime</type>
</CustomField>