force-app/main/default/objects/Breadwinner_Settings__c/fields/Override_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Override_Plan_Name__c</fullName>
    <description>Stores Override Plan Name</description>
    <label>Override Plan Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>