force-app/main/default/objects/Breadwinner_Settings__c/fields/Page_Layouts_Updated__c.field-meta.xml
<CustomField>
    <fullName>Page_Layouts_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Page Layouts Updated</label>
    <type>Checkbox</type>
</CustomField>