force-app/main/default/objects/Breadwinner_Settings__c/fields/Read_Only_Mode__c.field-meta.xml
<CustomField>
    <fullName>Read_Only_Mode__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Breadwinner is in read-only mode</description>
    <label>Read Only Mode</label>
    <type>Checkbox</type>
</CustomField>