force-app/main/default/objects/Breadwinner_Settings__c/fields/Salesforce_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Org_Id__c</fullName>
    <description>This field is to store Salesforce Org ID, which helps enforce data security in a sandbox refresh.</description>
    <label>Salesforce Org Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>